# Vehicle_Data_Generator

./: .env.example  .gitignore  README.md  build_exe.ps1  cli.py  crmApiGenerator.py  crm_api_generator.py  data.py  fotaBatchGenerator.py  fota_batch_generator.py  instititionalSalesGenerator.py  institutional_sales_generator.py  main.py  pyproject.toml  run_desktop.py  sampleFileGenerators.py  sample_file_generators.py  settings.py  simBatchGenerator.py  sim_batch_generator.py  ticketDataCsvGenerator.py  ticketJsonGenerator.py  ticket_data_csv_generator.py  ticket_json_generator.py
Sample_Files/: Card_details_sb.csv  Institutional_Sales_20251124.xlsx  Sample_Dispatch_Sheet.xlsx  Sample_FOTA_Sheet.csv  Sample_Institutional_Sales_Sheet.xlsx  Sample_OTA_Sheet.csv  Sample_Save_Device_State.csv  Sample_Save_Device_Vin.csv
src/vehicle_data_generator/: __init__.py  __main__.py  app.py  cli.py  crm_api_generator.py  dynamic_fields.py  institutional_sales_generator.py  sample_file_generators.py  settings.py  sim_batch_generator.py  ticket_data_csv_generator.py  ticket_json_generator.py
