[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vehicle-data-generator"
version = "0.1.0"
description = "CLI tool for generating vehicle datasets and CRM ticket API payloads"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "openpyxl",
    "requests",
]

[project.scripts]
vehicle-data-generator = "Vehicle_data_generator.cli:main"
