[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vdg"
version = "0.1.0"
description = "Desktop tool for generating vehicle datasets and CRM ticket API payloads"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "openpyxl",
    "requests",
]

[project.gui-scripts]
vdg = "vehicle_data_generator.app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
